Section 3: Client component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,9 @@
     <li>Alumno: {{ alumno }}</li>
   </ul>
 
-  <app-directiva></app-directiva>
+  <!-- <app-directiva></app-directiva> -->
+
+  <app-clients></app-clients>
 </div>
 
 <app-footer></app-footer>
