--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,7 @@
 <app-header></app-header>
 
-<div class="container">
-  <h1>
-    {{ title }}
-  </h1>
-  <ul>
-    <li>Curso: {{ curso }}</li>
-    <li>Profesor: {{ profesor }}</li>
-    <li>Alumno: {{ alumno }}</li>
-  </ul>
-
-  <!-- <app-directiva></app-directiva> -->
-
-  <app-clients></app-clients>
+<div class="container my-3">
+  <router-outlet></router-outlet>
 </div>
 
 <app-footer></app-footer>
