--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,5 +1,10 @@
 <div class="card border-success mb-3">
     <div class="card-header bg-transparent border-success">Listado de clientes</div>
+
+    <div class="my-2 text-left">
+        <button class="btn btn-primary btn-rounded" [routerLink]="['/clientes/form']">Crear cliente</button>
+    </div>
+
     <div class="card-body text-success">
         <table class="table table-bordered table-striped">
             <thead>
@@ -18,4 +23,4 @@
             </tbody>
         </table>
     </div>
-  </div>
+</div>
