--- a/src/app/clients/form/form.component.html
+++ b/src/app/clients/form/form.component.html
@@ -6,14 +6,14 @@
             <div class="form-group row">
                 <label for="razonSocial" class="col-form-lavel col-sm-2">Razon Social</label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" name="razonSocial" [(ngModel)]="getClient.razonSocial"> 
+                    <input type="text" class="form-control" name="razonSocial" [(ngModel)]="getClient.razonSocial" placeholder="El Nombre Papá">
                 </div>
             </div>
 
             <div class="form-group row">
                 <label for="fechaActiv" class="col-form-lavel col-sm-2">Fecha Activ</label>
                 <div class="col-sm-6">
-                    <input type="text" name="fechaActiv" class="form-control" [(ngModel)]="getClient.fechaActiv"> 
+                    <input type="text" name="fechaActiv" class="form-control" [(ngModel)]="getClient.fechaActiv" placeholder="AAAA-MM-DD"> 
                 </div>
             </div>
 
