--- a/src/app/clients/form/form.component.html
+++ b/src/app/clients/form/form.component.html
@@ -16,6 +16,15 @@
                     <input type="text" name="fechaActiv" class="form-control" [(ngModel)]="getClient.fechaActiv" placeholder="AAAA-MM-DD"> 
                 </div>
             </div>
+            
+            <div class="form-group row">
+                <label for="barrio" class="col-form-lavel col-sm-2">Barrio</label>
+                <div class="col-sm-6">
+                    <select name="barrio" id="barrio" class="form-control">
+                        <option *ngFor="let neigh of getNeighbors" value="{{neigh.idBarrio}}">{{neigh.name}}</option>
+                    </select>
+                </div>
+            </div>
 
             <div class="form-group row">
                 <div class="col-sm-6">
