--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -15,7 +15,7 @@
                 <tr>
                     <th>id</th>
                     <th>Razon Social</th>
-                    <th>Fecha Activ</th>
+                    <th>Fecha Activacion</th>
                     <th>Barrio</th>
                 </tr>
             </thead>
